--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
   "name": "robo-friends",
+  "homepage": "https://hijal.github.io/react-robot-friends",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "tachyons": "^4.12.0",
-    "web-vitals": "^1.0.1"
+    "react-scripts": "^1.1.5",
+    "tachyons": "^4.12.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
