--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^1.1.5",
-    "tachyons": "^4.12.0"
+    "tachyons": "^4.12.0",
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "predeploy": "npm run build",
